--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+  <script src="https://kit.fontawesome.com/7cdf4f7e05.js" crossorigin="anonymous"></script>
   <link data-trunk rel="css" href="./dist/css/main.css"/>
   <link data-trunk rel="copy-file" href="./static/404.html"/>
   <title>yew template</title>
