--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-  <link rel="stylesheet" href="/main-faba2416193ef083.css">
+  <script src="https://kit.fontawesome.com/7cdf4f7e05.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/main-e1c077c22718e601.css">
   
   <title>yew template</title>
 
-<link rel="preload" href="/index-62af27037b4f8233_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/index-62af27037b4f8233.js"></head>
+<link rel="preload" href="/index-9a9af53716ee0192_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/index-9a9af53716ee0192.js"></head>
 <body>
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
@@ -34,4 +35,4 @@
   <!-- End Single Page Apps for GitHub Pages -->
 
 
-<script type="module">import init from '/index-62af27037b4f8233.js';init('/index-62af27037b4f8233_bg.wasm');</script></body></html>
+<script type="module">import init from '/index-9a9af53716ee0192.js';init('/index-9a9af53716ee0192_bg.wasm');</script></body></html>
