--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://kit.fontawesome.com/7cdf4f7e05.js" crossorigin="anonymous"></script>
   <link data-trunk rel="css" href="./dist/css/main.css"/>
   <link data-trunk rel="copy-file" href="./static/404.html"/>
-  <title>yew template</title>
+  <title>abex.dev</title>
 </head>
 <body>
   <!-- Start Single Page Apps for GitHub Pages -->
