--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <script src="https://kit.fontawesome.com/7cdf4f7e05.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/main-e1c077c22718e601.css">
+  <link rel="stylesheet" href="/main-bc60364434d71b40.css">
   
-  <title>yew template</title>
+  <title>abex.dev</title>
 
-<link rel="preload" href="/index-9a9af53716ee0192_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/index-9a9af53716ee0192.js"></head>
+<link rel="preload" href="/index-f0e5deb15f127601_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/index-f0e5deb15f127601.js"></head>
 <body>
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
@@ -35,4 +35,4 @@
   <!-- End Single Page Apps for GitHub Pages -->
 
 
-<script type="module">import init from '/index-9a9af53716ee0192.js';init('/index-9a9af53716ee0192_bg.wasm');</script></body></html>
+<script type="module">import init from '/index-f0e5deb15f127601.js';init('/index-f0e5deb15f127601_bg.wasm');</script></body></html>
